Enhance UI and add bulk upload API

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.5",
     "lucide-react": "^0.563.0",
+    "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
