--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Interview management system with admin and candidate panels",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -20,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pdfkit": "^0.13.0",
+    "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
