--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mammoth": "^1.11.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "openai": "^6.22.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.624",
     "pdfkit": "^0.13.0",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
