--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
+    "@vapi-ai/web": "^2.5.2",
     "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.34.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
     "tailwindcss": "^4.1.18"
   },
